--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: bmordan/jekyll-now
+  github: bmordan/swe-news
   instagram:
   linkedin:
   pinterest:
@@ -47,7 +47,7 @@ url: https://community.whitehat.org.uk
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "https://bmordan.github.io/swe-news"
 
 #
 # !! You don't need to change any of the configuration flags below !!
